--- a/Quotation_Price/views/qoutation_template.xml
+++ b/Quotation_Price/views/qoutation_template.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <data>
-    <record id="sale_order_template_view_form2_inherit" model="ir.ui.view">
-    <field name="name">sale.order.template.form.inherit</field>
+    <record id="sale_order_template_view_form_inherit_custom" model="ir.ui.view">
+    <field name="name">sale.order.template.form.inherit.custom</field>
     <field name="model">sale.order.template</field>
     <field name="inherit_id" ref="sale_management.sale_order_template_view_form"/>
     <field name="arch" type="xml">
