--- a/Quotation_Price/views/qoutation_template.xml
+++ b/Quotation_Price/views/qoutation_template.xml
@@ -3,7 +3,7 @@
   <data>
     <record id="sale_order_template_view_form_inherit_custom" model="ir.ui.view">
     <field name="name">sale.order.template.form.inherit.custom</field>
-    <field name="model">sale.order.template</field>
+    <field name="model">sale.order.template.line</field>
     <field name="inherit_id" ref="sale_management.sale_order_template_view_form"/>
     <field name="arch" type="xml">
       <xpath expr="/notebook/page/field[@name='sale_order_template_line_ids']/tree/field[@name='product_uom_category_id']/field[@name='product_uom_qty']" positon="after">
