--- a/Quotation_Price/views/qoutation_template.xml
+++ b/Quotation_Price/views/qoutation_template.xml
@@ -6,7 +6,7 @@
     <field name="model">sale.order.template</field>
     <field name="inherit_id" ref="sale_management.sale_order_template_view_form"/>
     <field name="arch" type="xml">
-      <xpath expr="/notebook/page/field[@name='sale_order_template_line_ids']/tree/field[@name='product_uom_qty']" positon="after">
+      <xpath expr="//notebook/page/field[@name='sale_order_template_line_ids']/tree/field[@name='product_uom_qty']" positon="after">
         <field name="description_head"/>
       </xpath>
     </field>
