--- a/Quotation_Price/views/qoutation_template.xml
+++ b/Quotation_Price/views/qoutation_template.xml
@@ -7,8 +7,8 @@
     <field name="inherit_id" ref="sale_management.sale_order_template_view_form"/>
     <field name="arch" type="xml">
       <xpath expr="//notebook/page/field[@name='sale_order_template_line_ids']/tree/field[@name='product_id']" position="after">
-        <field name="price_unit"/>
-        <field name="analytic_line_ids"/>
+        <field name="testone"/>
+        <field name="testtwo"/>
       </xpath>
     </field>
     </record>
