--- a/Quotation_Price/views/qoutation_template.xml
+++ b/Quotation_Price/views/qoutation_template.xml
@@ -8,6 +8,8 @@
     <field name="arch" type="xml">
       <xpath expr="//notebook/page/field[@name='sale_order_template_line_ids']/tree/field[@name='product_id']" position="after">
         <field name="testone"/>
+      </xpath>
+      <xpath expr="//notebook/page/field[@name='sale_order_template_line_ids']/tree/field[@name='testone']" position="after">
         <field name="testtwo"/>
       </xpath>
     </field>
